# Practica02_Lambdas

./: .gitignore  Doxyfile  README.md  animal.csv  bioma.csv  meson.build  veterinario.csv
Docs/html/: administrador_8h_source.html  animal_8c_source.html  animal_8h_source.html  annotated.html  bioma_8h.html  bioma_8h_source.html  dir_1e771ff450ae847412a8c28572c155bb.html  entidad_8h.html  files.html  globals.html  globals_eval.html  globals_type.html  main_8c.html  main_8c_source.html  sistema_8h.html  sistema_8h_source.html  structAdministrador__-members.html  structAnimal__.html  structBioma__-members.html  structBioma__.html  veterinario_8c.html  veterinario_8c_source.html
Docs/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_2.js  defines_1.js  enums_0.js  enumvalues_2.js  enumvalues_3.js  files_1.js  functions_3.js  typedefs_1.js  typedefs_2.js  variables_1.js  variables_6.js
Docs/latex/: administrador_8c.tex  administrador_8c_source.tex  animal_8c.tex  animal_8c_source.tex  annotated.tex  bioma_8c_source.tex  bioma_8h.tex  dir_1e771ff450ae847412a8c28572c155bb.tex  entidad_8h.tex  entidad_8h_source.tex  files.tex  main_8c_source.tex  sistema_8h_source.tex  structAdministrador__.tex  veterinario_8c.tex  veterinario_8c_source.tex  veterinario_8h_source.tex
SRC/: administrador.c  administrador.h  animal.c  animal.h  bioma.c  bioma.h  entidad.h  entidades.h  main.c  sistema.h  trabajador.c  trabajador.h  veterinario.c  veterinario.h
SRC/Doc/html/: administrador_8c.html  administrador_8c_source.html  (+24 more)
(+33 files in other folders)
